# nanoGPT

./: .flake8  .gitignore  justfile  pyproject.toml
config/: train-fullshakes-char.yaml  train-gpt2-openwebtext.yaml  train-shakespeare-char-tiny.yaml  train-shakespeare-char.yaml  train_shakespeare_char.py  train_shakespeare_char.yaml  train_shakespeare_char_tiny.yaml
config/fork-archive/: finetune_shakespeare.py
config/shakespeare/full/char/: default.yaml
config/shakespeare/tiny/char/: default.yaml  ident-full.yaml  medium.yaml  single.yaml  small.yaml
data/shakespeare/full/char/: prepare.py
data/shakespeare/full/gpt2/: prepare.py
data/shakespeare/tiny/char/: prepare.py
nanoGPT/: __init__.py  __main__.py  activations.py  blocks.py  cli.py  config.py  configurator.py  data.py  identification.py  layers.py  model.py  optim.py  pretrained.py  train.py
scripts/: bench.py  lambda-labs-setup.sh
tests/unit/: conftest.py  test_activations.py  test_model.py
tests/unit/config/: test.yaml
